--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,31 @@
+* {
+    margin: 0;
+    border: 0;
+}
+header {
+    background-color: #333;
+    margin: 0;
+    padding: 10%;
+    position: relative;
+}
+.nav-list {
+    display: flex;
+    gap: 30px; 
+    list-style: none;
+    justify-content: left;
+    position: absolute;
+}
 .photo-row {
   display: flex;
-  gap.100px;
+  gap 100px;
   justify-content:center;
 }
 .photo-set {
     text-align: center;
-    margin: 100px;
     padding: 0px;
    
 }
 .photo-set img{
     margin: 20px;
     width: 100%;
-    size: max;
 }
