--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,13 @@
     border: 0;
 }
 header {
-    background-color: #333;
+    background-color: #dd8888;
     margin: 0;
     padding: 10%;
     position: relative;
 }
 .nav-list {
+    color: rgb(13, 200, 57);
     display: flex;
     gap: 30px; 
     list-style: none;
