--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ header {
     display: flex;
     gap: 30px; 
     list-style: none;
-    justify-content: left;
+    text-align: right;
     position: absolute;
 }
 .photo-row {
