--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 header {
     background-color: #dd8888;
     margin: 0;
-    padding: 5%;
+    padding: 5px;
     position: relative;
 }
 #logo {
@@ -15,6 +15,11 @@ header {
 }
 #heading {
     text-align: right;
+}
+
+#profile {
+    width: 100%;
+
 }
 .nav-list {
     color: rgb(13, 200, 57);
@@ -27,6 +32,11 @@ header {
 h3 {
     text-align: center;
     margin-top: 10px;
+}
+p {
+    text-align: center;
+    font-weight: 600;
+    margin: 20px;
 }
 .photo-row {
   display: flex;
