adjusted the logo size

--- a/css/style.css
+++ b/css/style.css
@@ -4,22 +4,25 @@
 }
 header {
     background-color: #dd8888;
-    margin: 0;
+    margin-bottom: 10px;
     padding: 5px;
     position: relative;
 }
 #logo {
-    justify-content: left;
-    border-radius: 100%;
-    margin: 0;
+width: 100px; 
+height: 50px;   
+justify-content: center;
+border-radius: 200%;
+margin: 0;
 }
 #heading {
-    text-align: right;
+    text-align: center;
 }
 
 #profile {
-    width: 100%;
-
+    width: 50%;
+    display: block;
+    margin: 0 auto;
 }
 .nav-list {
     color: rgb(13, 200, 57);
@@ -31,7 +34,7 @@ header {
 }
 h3 {
     text-align: center;
-    margin-top: 10px;
+    margin-top: 0px;
 }
 p {
     text-align: center;
@@ -56,6 +59,9 @@ footer{
     text-align: center;
 }
 img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
     border-radius: 5px;
-    image-resolution: 100px;
+
 }
