--- a/css/style.css
+++ b/css/style.css
@@ -59,9 +59,8 @@ footer{
     text-align: center;
 }
 img {
-    width: 100%;
-    height: auto;
-    object-fit: contain;
     border-radius: 5px;
+    width: max-content;
+    height: max-content;
 
 }
