--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,12 @@ p {
   display: flex;
   gap 100px;
   justify-content:center;
+  flex-wrap: wrap;
 }
 .photo-set {
-    text-align: center;
+    display: flex;
+    gap: 4000px;
+    justify-content: center;
     padding: 0px;
    
 }
@@ -59,8 +62,9 @@ footer{
     text-align: center;
 }
 img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
     border-radius: 5px;
-    width: max-content;
-    height: max-content;
-
+    gap: 200px;
 }
